--- a/css/style.css
+++ b/css/style.css
@@ -469,9 +469,20 @@ footer span a:hover{
     .navbar .max-width {
         margin-left: 0;
     }
+    .about .about-content .left img{
+        width: 334px;
+    }
+    
+}
+@media (max-width: 941px) {
+.services .serv-content .card {
+    background-color:unset;
+
+}
 }
 
 @media (max-width: 947px) {
+   
     .max-width {
         max-width: 800px;
         padding: 0 50px;
@@ -560,6 +571,7 @@ footer span a:hover{
     .home .home-content .text-3 {
         font-size: 32px;
     }
+    
 
     .home .home-content a {
         font-size: 20px;
@@ -567,7 +579,9 @@ footer span a:hover{
 
     .services .serv-content .card {
         width: 100%;
+        
     }
+    
 }
 
 @media (max-width: 500px) {
